# SS_PDV_LITE

./: .gitignore  Cargo.toml  README.md
migrations/: 20250913181550_create_initial_tables.sql
src/: main.rs
src/components/: combo_box.rs  mod.rs  search_bar.rs
src/entities/: mod.rs  product.rs  product_purchase.rs  product_sale.rs  purchase.rs  sale.rs
src/helpers/: mod.rs
src/repositories/: mod.rs  product_purchase_repository.rs  product_repository.rs  product_sale_repository.rs  purchase_repository.rs  sale_repository.rs
src/screens/: add_purchase.rs  home.rs  mod.rs
src/services/: mod.rs  product_purchase_service.rs  product_sale_service.rs  product_service.rs
